--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-spotify-api": "^1.0.7",
     "request": "^2.88.0",
-    "spotify": "^0.3.0",
     "twitter": "^1.7.1"
   }
 }
