--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "dotenv": "^6.1.0",
+    "moment": "^2.24.0",
     "node-spotify-api": "^1.0.7",
     "request": "^2.88.0",
     "twitter": "^1.7.1"
